--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/heart.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The marriage proposal service">
-    <title>Srisuba - The matrimonial proposal service</title>
+    <title>Srisuba - The love connection service</title>
   </head>
   <body>
     <div id="root"></div>
